--- a/servicios.html
+++ b/servicios.html
@@ -18,7 +18,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md text-capitalize bg-inverse scrolling-navbar" id="main-navbar" style="background: #343434;">
-        <div class="container"><a href="/index.html"><img id="brand-image" src="/assets/img/Copy%20of%20HRVZ%20.tech.png" style="width: 197px;"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a href="/index.html"><img id="brand-image" src="/assets/img/Copy%20of%20HRVZ%20.tech%20(2).png" style="width: 197px;"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Inicio</a></li>
